# ragcheck

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  dogfood.yml
benchmarks/: README.md  beir_runner.py
benchmarks/results/: arguana-bm25-300.json  arguana-bm25-800.json  arguana.md  fiqa-bm25-300.json  fiqa-bm25-800.json  fiqa.md  nfcorpus-bm25-300.json  nfcorpus-bm25-800.json  nfcorpus.md  scidocs-bm25-300.json  scidocs-bm25-800.json  scidocs.md  scifact-bm25-300.json  scifact-bm25-800.json  scifact.md
examples/: baseline.json
examples/acme-docs/: architecture.md  authentication.md  billing.md  deployment.md  incidents.md
src/ragcheck/: __init__.py  cli.py  gate.py  runner.py  stats.py  text.py
src/ragcheck/corpus/: __init__.py  loader.py  models.py
src/ragcheck/dataset/: __init__.py  generator.py  leakage.py  models.py
src/ragcheck/matching/: __init__.py  spans.py
src/ragcheck/metrics/: __init__.py  core.py
src/ragcheck/report/: __init__.py  badge.py  compare.py  diff.py  failures.py  markdown.py
src/ragcheck/retrievers/: __init__.py  base.py  bm25.py  chunking.py  dense.py  hybrid.py  rerank.py
tests/: test_bm25.py  test_chunking.py  test_cli.py  test_corpus.py  test_dense.py  test_dense_models.py  test_failures.py  test_gate.py  test_generator.py  test_hybrid.py  test_leakage.py  test_metrics.py  test_report.py  test_rerank.py  test_runner.py  test_spans.py  test_stats.py  test_version.py
