[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragcheck"
version = "0.1.0"
description = "Deterministic retrieval evaluation for RAG systems: measure it, gate it, ship it."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "VictoriousAttitude" }]
keywords = ["rag", "retrieval", "evaluation", "information-retrieval", "benchmarking", "ci"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
]

[project.scripts]
ragcheck = "ragcheck.cli:main"

[project.optional-dependencies]
dense = [
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ragcheck"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
packages = ["ragcheck"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
